--- a/interrupt_latency/README
+++ b/interrupt_latency/README
@@ -1,3 +1,5 @@
+Test to measure interrupt latency
+
 == Compile ==
 	$ make 
 
@@ -11,4 +13,11 @@
 
 == Unload module ==
 	# ./rm-latency.sh
+
+
+== System characteristics =
+RTAI 3.7.1
+Kernel version: 2.6.28.9
+Hardware: Pentium IV @ 2.8 GHz. RAM 1 GB
+
 
