--- a/interrupt_latency/README
+++ b/interrupt_latency/README
@@ -20,4 +20,5 @@ RTAI 3.7.1
 Kernel version: 2.6.28.9
 Hardware: Pentium IV @ 2.8 GHz. RAM 1 GB
 
-
+== Video ==
+https://www.youtube.com/watch?v=j3J7BNVkJjI
